--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -23,7 +23,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-webcam": "^7.1.1",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
