--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-webcam": "^7.1.1",
+    "serif": "^0.0.0",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.11",
