--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-type-animation": "^3.2.0",
     "react-webcam": "^7.1.1",
     "serif": "^0.0.0",
     "slick-carousel": "^1.8.1",
